DeadLock Example